--- a/urbanthreads/store/templates/store/product-page.html
+++ b/urbanthreads/store/templates/store/product-page.html
@@ -42,7 +42,7 @@
                                     <div>
                                         <hr>
                                         <p class="size-symbol">SIZE GUIDE</p>
-                                        <form><a href="{% url 'accounts:add_to_cart' product.pk %}" class="btn btn-primary add-to-cart-btn" role="button" style="width: 100%;font-size: .8em;">ADD TO CART</a></form>
+                                        <form><a href="{% url 'accounts:add_to_cart' product.uid %}" class="btn btn-primary add-to-cart-btn" role="button" style="width: 100%;font-size: .8em;">ADD TO CART</a></form>
                                     </div>
                                     <div class="summary">
                                         <p><br><strong>COMPOSITION &amp; CARE</strong><br>MACHINE WASH UP TO 30C/86F, GENTLE CYCLE<br>DO NOT BLEACH<br>IRON UP TO 110C/230F<br>DO NOT IRON DIRECTLY ON PRINTS/EMBROIDERY/EMBELLISHMENTS/LI&gt;<br>DO NOT DRY CLEAN<br>DO NOT TUMBLE DRY<br><br></p>
