--- a/urbanthreads/templates/base.html
+++ b/urbanthreads/templates/base.html
@@ -24,7 +24,7 @@
 
 <body>
     <main class="page h-auto">
-        <!-- Start: Navbar with Centered Brand -->
+
         <nav class="navbar navbar-expand-md w-100 navbar-light" style="position: fixed;height: 55px;backdrop-filter: blur(2px);z-index: 1000;">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse order-2" id="navcol-2">
@@ -41,7 +41,7 @@
                                 <div class="dropdown-menu cart-drop p-3">
                                     <h6 class="fw-bold">SHOPPING CART</h6>
                                     <div class="outer-div">
-                                        <div id="start-from-here" class="inner-div p-1 flex"><img class="h-100 w-auto" src="assets/img/Women_11.webp">
+                                        <div id="start-from-here" class="inner-div p-1 flex"><img class="h-100 w-auto" src="">
                                             <div class="p-1 w-100"><span>Product name<br>Product Type (Hoodie)<br>M - SIZE&nbsp;<br></span>
                                                 <h6 class="text-end fw-bold">PKR 2000</h6>
                                             </div>
@@ -67,7 +67,7 @@
                             <line y1="11" x2="20" y2="11" stroke="black" stroke-width="2"></line>
                             </svg>
                     </button>
-                    <li class="nav-item"><a class="navbar-brand" href="#">URBAN THREADS</a></li>
+                    <li class="nav-item"><a class="navbar-brand" href="{% url 'store:home' %}">URBAN THREADS</a></li>
                 </ul>
                 <div class="order-3 ms-auto order-md-3 navbar-collapse collapse nav-content">
                     <ul class="navbar-nav ms-auto">
@@ -75,87 +75,86 @@
                     </ul>
                 </div>
             </div>
-        </nav><!-- End: Navbar with Centered Brand -->
+        </nav>
+
         <div class="offcanvas offcanvas-start" tabindex="-1" id="navslide">
+
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title fw-bold">URBAN THREADS</h5><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
+                <h5 class="offcanvas-title fw-bold">URBAN THREADS</h5>
+                <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
             </div>
+
             <div class="offcanvas-body">
                 <div>
+
                     <ul class="nav nav-tabs" role="tablist" style="border-width: 0px;">
                         <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-1">MEN</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-2">WOMEN</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-3">MINORS</a></li>
                     </ul>
+
                     <div class="tab-content">
+
                         <div class="tab-pane active" role="tabpanel" id="tab-1">
                             <p class="fw-bold p-2">Collection</p>
-                            <div style="padding-left: 10px;"><a href="#">
-                                    <p>PANTS<br></p>
-                                </a><a href="#">
-                                    <p>SHORTS<br></p>
-                                </a><a href="#">
-                                    <p>T-SHIRTS<br></p>
-                                </a><a href="#">
-                                    <p>SHIRTS<br></p>
-                                </a><a href="#">
-                                    <p>TROUSERS<br></p>
-                                </a><a href="#">
-                                    <p>SHOES<br></p>
-                                </a></div>
+                            <div style="padding-left: 10px;">
+                                <a href="#"><p>PANTS<br></p></a>
+                                <a href="#"><p>SHORTS<br></p></a>
+                                <a href="#"><p>T-SHIRTS<br></p></a>
+                                <a href="#"><p>SHIRTS<br></p></a>
+                                <a href="#"><p>TROUSERS<br></p></a>
+                                <a href="#"><p>SHOES<br></p></a>
+                            </div>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="tab-2">
                             <p class="fw-bold p-2">Collection</p>
-                            <div style="padding-left: 10px;"><a href="#">
-                                    <p>PANTS<br></p>
-                                </a><a href="#">
-                                    <p>T-SHIRTS<br></p>
-                                </a><a href="#">
-                                    <p>SHIRTS<br></p>
-                                </a><a href="#">
-                                    <p>TROUSERS<br></p>
-                                </a><a href="#">
-                                    <p>SHOES<br></p>
-                                </a></div>
+                            <div style="padding-left: 10px;">
+                                <a href="#"><p>PANTS<br></p></a>
+                                <a href="#"><p>T-SHIRTS<br></p></a>
+                                <a href="#"><p>SHIRTS<br></p></a>
+                                <a href="#"><p>TROUSERS<br></p></a>
+                                <a href="#"><p>SHOES<br></p></a>
+                            </div>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="tab-3">
                             <p class="fw-bold p-2">Catagory</p>
-                            <div style="padding-left: 10px;"><a href="#">
-                                    <p>BOYS<br></p>
-                                </a><a href="#">
-                                    <p>GIRLS<br></p>
-                                </a></div>
+                            <div style="padding-left: 10px;">
+                                <a href="#"><p>BOYS<br></p></a>
+                                <a href="#"><p>GIRLS<br></p></a>
+                            </div>
                         </div>
+
+
                     </div>
                 </div><a class="btn btn-primary" role="button" href="{% url 'accounts:user_profile' %}"><i class="far fa-user-circle"></i>Profile</a>
             </div>
         </div>
         {% block content %}
         {% endblock %}
+
         <div class="col d-flex justify-content-center align-items-center py-5 hr-min">
             <form class="my-5">
                 <h3 style="color: rgb(0,0,0);font-family: Antonio, sans-serif;font-size: 29px;">SUBSCRIBE TO OUR NEWSLETTER</h3>
                 <div class="d-flex"><input class="form-control shadow-none w-100 border-0" type="email" placeholder="Enter Your Email" required=""><button class="btn btn-primary" type="button" style="color: var(--bs-gray-900);background: rgba(255,255,255,0);border-width: 0px;box-shadow: none;"><i class="fa fa-arrow-right"></i></button></div>
                 <hr class="m-0">
             </form>
-        </div><!-- Start: Footer Basic -->
+        </div>
+
         <footer class="d-flex d-xl-flex justify-content-center align-items-center justify-content-xl-center align-items-xl-center footer-basic">
             <div style="width: 90%;">
-                <!-- Start: Links -->
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" style="color: var(--bs-orange);font-weight: bold;">Home</a></li>
-                    <li class="list-inline-item"><a href="#" style="color: var(--bs-cyan);font-weight: bold;">Forum</a></li>
+                    <li class="list-inline-item"><a href="{% url 'store:home' %}" style="color: var(--bs-orange);font-weight: bold;">Home</a></li>
+                    <li class="list-inline-item"><a href="{% url 'accounts:login' %}" style="color: var(--bs-cyan);font-weight: bold;">Login</a></li>
                     <li class="list-inline-item"><a href="#" style="color: var(--bs-yellow);font-weight: bold;">About</a></li>
                     <li class="list-inline-item"><a href="#" style="color: var(--bs-gray-100);font-weight: bold;">cookies</a></li>
-                </ul><!-- End: Links -->
-                <!-- Start: Copyright -->
-                <p class="copyright"><br><strong>&nbsp;© 2023&nbsp;</strong>URBAN THREADS STORES</p><!-- End: Copyright -->
+                </ul>
+                <p class="copyright"><br><strong>&nbsp;© 2023&nbsp;</strong>URBAN THREADS STORES</p>
             </div>
-        </footer><!-- End: Footer Basic -->
+        </footer>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="{% static 'assets\js\script.min.js' %}"></script>
 </body>
-
 </html>
