--- a/urbanthreads/cart/templates/cart/cart.html
+++ b/urbanthreads/cart/templates/cart/cart.html
@@ -89,7 +89,7 @@
         </section>
         <div class="container d-flex-j-end py-5">
             <div class="chkot-m">
-                <h6 class="text-end fw-bold m-0">Subtotal : PKR {{total_price}}</h6><span><br><br><span style="color: rgba(0, 0, 0, 0.75);">Taxes and shipping calculated at checkout</span><br></span>
+                <h6 class="text-end fw-bold m-0">Subtotal : PKR 32,323</h6><span><br><br><span style="color: rgba(0, 0, 0, 0.75);">Taxes and shipping calculated at checkout</span><br></span>
                 <form><button class="btn btn-primary w-100 btn-p" type="button">CHECK OUT&nbsp;</button></form><a class="btn btn-primary white-btn w-100 mt-2 btn-p" role="button">CONTINUE SHOPPING</a>
             </div>
         </div>
